--- a/M04/README
+++ b/M04/README
@@ -1,4 +1,8 @@
+These files are all within M04:
+
 app.py is the submission to m04 lab python apis
 
 zoo.py, zoo as meagerie.PNG, zoo from interpreter, and 16-8pythondb.py are the submissions for M04 Programming assignment Modules and Databases
+
+
 
